--- a/src/sample/Scenes/FriendlyMatch.fxml
+++ b/src/sample/Scenes/FriendlyMatch.fxml
@@ -24,8 +24,8 @@
             <Font name="Noto Sans CJK JP Medium" size="18.0" />
          </font>
       </Label>
-      <ScrollPane layoutX="67.0" layoutY="230.0" prefHeight="68.0" prefWidth="200.0" />
-      <ScrollPane layoutX="551.0" layoutY="230.0" prefHeight="68.0" prefWidth="200.0" />
+      <ScrollPane fx:id="player1Field" layoutX="67.0" layoutY="230.0" prefHeight="68.0" prefWidth="200.0" />
+      <ScrollPane fx:id="player2Field" layoutX="551.0" layoutY="230.0" prefHeight="68.0" prefWidth="200.0" />
       <Button fx:id="randomButton" layoutX="192.0" layoutY="343.0" mnemonicParsing="false" onAction="#randomButtonAction" prefHeight="50.0" prefWidth="150.0" text="Random" />
       <Button fx:id="returnButton" layoutX="476.0" layoutY="343.0" mnemonicParsing="false" onAction="#returnButtonAction" prefHeight="50.0" prefWidth="150.0" text="Return" />
       <Button fx:id="launchButton" layoutX="300.0" layoutY="432.0" mnemonicParsing="false" onAction="#launchButtonAction" prefHeight="75.0" prefWidth="200.0" text="Launch" />
