--- a/src/sample/Scenes/Player.fxml
+++ b/src/sample/Scenes/Player.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label alignment="CENTER" layoutX="150.0" layoutY="63.0" prefHeight="50.0" prefWidth="500.0" text="Player">
          <font>
@@ -23,8 +23,14 @@
             <Font name="Noto Sans CJK JP Medium" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="242.0" layoutY="169.0" text="powerValue" />
-      <Label layoutX="242.0" layoutY="223.0" text="staminaValue" />
+      <Label layoutX="242.0" layoutY="169.0" text="powerValue">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
+      <Label layoutX="242.0" layoutY="223.0" text="staminaValue">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
       <Button fx:id="returnButton" layoutX="575.0" layoutY="449.0" mnemonicParsing="false" onAction="#returnButtonAction" prefHeight="50.0" prefWidth="150.0" text="Return" />
       <ScrollPane layoutX="119.0" layoutY="319.0" prefHeight="200.0" prefWidth="200.0" />
       <Label layoutX="184.0" layoutY="275.0" text="Matchs :">
@@ -37,12 +43,18 @@
             <Font name="Noto Sans CJK JP Medium" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="650.0" layoutY="192.0" text="RankingValue" />
+      <Label layoutX="650.0" layoutY="192.0" text="RankingValue">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
       <Label layoutX="499.0" layoutY="290.0" text="Ranking :">
          <font>
             <Font name="Noto Sans CJK JP Medium" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="677.0" layoutY="296.0" text="rank" />
+      <Label layoutX="677.0" layoutY="296.0" text="rank">
+         <font>
+            <Font size="14.0" />
+         </font></Label>
    </children>
 </AnchorPane>
