--- a/src/sample/Scenes/FriendlyMatch.fxml
+++ b/src/sample/Scenes/FriendlyMatch.fxml
@@ -13,12 +13,12 @@
             <Font name="Noto Sans CJK JP Medium" size="25.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="216.0" layoutY="174.0" text="Player 1">
+      <Label alignment="CENTER" layoutX="216.0" layoutY="174.0" text="Player 1" fx:id="player1Name">
          <font>
             <Font name="Noto Sans CJK JP Medium" size="18.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="716.0" layoutY="174.0" text="Player 2">
+      <Label alignment="CENTER" layoutX="716.0" layoutY="174.0" text="Player 2" fx:id="player2Name">
          <font>
             <Font name="Noto Sans CJK JP Medium" size="18.0" />
          </font>
