--- a/src/sample/Scenes/Tournament.fxml
+++ b/src/sample/Scenes/Tournament.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,7 +15,7 @@
       </Label>
       <Button fx:id="rankingButton" layoutX="650.0" layoutY="375.0" mnemonicParsing="false" onAction="#rankingButtonAction" prefHeight="100.0" prefWidth="200.0" text="Ranking" />
       <Button fx:id="returnButton" layoutX="650.0" layoutY="579.0" mnemonicParsing="false" onAction="#returnButtonAction" prefHeight="100.0" prefWidth="200.0" text="Return" />
-      <ScrollPane layoutX="118.0" layoutY="278.0" prefHeight="351.0" prefWidth="366.0" fx:id="matchPane"/>
+      <ScrollPane fx:id="matchPane" layoutX="118.0" layoutY="278.0" prefHeight="351.0" prefWidth="366.0" />
       <Label layoutX="274.0" layoutY="213.0" text="Matchs">
          <font>
             <Font name="Noto Sans CJK JP Medium" size="18.0" />
@@ -31,8 +30,8 @@
          <font>
             <Font size="18.0" />
          </font></Label>
-      <ScrollPane layoutX="163.0" layoutY="127.0" prefHeight="50.0" prefWidth="200.0" fx:id="roundPane"/>
-      <Button layoutX="775.0" layoutY="45.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="150.0" text="Change Sex" fx:id="sexButton" onAction="#changeSex"/>
-      <Label layoutX="775.0" layoutY="111.0" text="Men" fx:id="sexLabel"/>
+      <ScrollPane fx:id="roundPane" layoutX="205.0" layoutY="127.0" prefHeight="75.0" prefWidth="200.0" />
+      <Button fx:id="sexButton" layoutX="775.0" layoutY="45.0" mnemonicParsing="false" onAction="#changeSex" prefHeight="50.0" prefWidth="150.0" text="Change Sex" />
+      <Label fx:id="sexLabel" layoutX="775.0" layoutY="111.0" text="Men" />
    </children>
 </AnchorPane>
